--- a/htdocs_API/RSDB/xd/data_ready.html
+++ b/htdocs_API/RSDB/xd/data_ready.html
@@ -13,16 +13,18 @@
 
 <body>
     <ul class="nav justify-content-end p-3 mb-2 bg-primary text-white">
-        <li class="nav-item">
-          <a class="nav-link text-white" href="#"></a>
+      <li class="nav-item">
+        <a class="nav-link text-white" href="index.html">Database</a>
+      </li>
+      <li class="nav-item">
+          <a class="nav-link text-white" href="data_driver.html">Data Driver</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link text-white" href="#"></a>
+          <a class="nav-link text-white" href="data_user.html">Data User</a>
         </li>
         <li class="nav-item">
-            <a class="nav-link text-white" href="#"></a>
+            <a class="nav-link text-white" href="data_ready.html">Driver Active</a>
           </li>
-        <li class="nav-item ">
           <a class="nav-link disabled text-danger" href="#" tabindex="-1" aria-disabled="true" id="acc">0x4776d5feb2151526564e784db8d9bcf1f85f9f49</a>
         </li>
       </ul>
